change icon in resize button

--- a/cph/app/Frontend/resources.qrc
+++ b/cph/app/Frontend/resources.qrc
@@ -1,7 +1,7 @@
 <!DOCTYPE RCC>
 <RCC version="1.0">
 <qresource prefix="/">
-    <file>resources/icons/resize.svg</file>
+    <file>resources/icons/maximize.svg</file>
     <file>resources/icons/close.svg</file>
 </qresource>
 </RCC>
