--- a/cph/app/Frontend/app.qrc
+++ b/cph/app/Frontend/app.qrc
@@ -20,5 +20,6 @@
 
     <file>Tabs/qmldir</file>
     <file>Tabs/StackTabView.qml</file>
+    <file>Tabs/StackTabDelegate.qml</file>
 </qresource>
 </RCC>
