--- a/cph/app/Frontend/resources.qrc
+++ b/cph/app/Frontend/resources.qrc
@@ -1,6 +1,23 @@
 <!DOCTYPE RCC>
 <RCC version="1.0">
 <qresource prefix="/">
+    <file>resources/fonts/IBMPlexMono-Bold.ttf</file>
+    <file>resources/fonts/IBMPlexMono-BoldItalic.ttf</file>
+    <file>resources/fonts/IBMPlexMono-ExtraLight.ttf</file>
+    <file>resources/fonts/IBMPlexMono-ExtraLightItalic.ttf</file>
+    <file>resources/fonts/IBMPlexMono-Italic.ttf</file>
+    <file>resources/fonts/IBMPlexMono-Light.ttf</file>
+    <file>resources/fonts/IBMPlexMono-LightItalic.ttf</file>
+    <file>resources/fonts/IBMPlexMono-Medium.ttf</file>
+    <file>resources/fonts/IBMPlexMono-MediumItalic.ttf</file>
+    <file>resources/fonts/IBMPlexMono-Regular.ttf</file>
+    <file>resources/fonts/IBMPlexMono-SemiBold.ttf</file>
+    <file>resources/fonts/IBMPlexMono-SemiBoldItalic.ttf</file>
+    <file>resources/fonts/IBMPlexMono-Text.ttf</file>
+    <file>resources/fonts/IBMPlexMono-TextItalic.ttf</file>
+    <file>resources/fonts/IBMPlexMono-Thin.ttf</file>
+    <file>resources/fonts/IBMPlexMono-ThinItalic.ttf</file>
+    
     <file>resources/icons/maximize.svg</file>
     <file>resources/icons/close.svg</file>
 </qresource>
