--- a/cph/app/Frontend/app.qrc
+++ b/cph/app/Frontend/app.qrc
@@ -21,5 +21,6 @@
     <file>Tabs/qmldir</file>
     <file>Tabs/StackTabView.qml</file>
     <file>Tabs/StackTabDelegate.qml</file>
+    <file>Tabs/StackTabHeader.qml</file>
 </qresource>
 </RCC>
