--- a/cph/app/Frontend/resources.qrc
+++ b/cph/app/Frontend/resources.qrc
@@ -20,5 +20,8 @@
     
     <file>resources/icons/maximize.svg</file>
     <file>resources/icons/close.svg</file>
+    <file>resources/icons/chevron-down.svg</file>
+    <file>resources/icons/chevron-up.svg</file>
+    <file>resources/icons/subtract-large.svg</file>
 </qresource>
 </RCC>
