--- a/cph/app/Frontend/app.qrc
+++ b/cph/app/Frontend/app.qrc
@@ -23,5 +23,7 @@
     <file>Tabs/StackTabDelegate.qml</file>
     <file>Tabs/StackTabHeader.qml</file>
     <file>Tabs/StackPagePlaceholder.qml</file>
+    <file>Tabs/StackPageSettings.qml</file>
+    <file>Tabs/StackPageVote.qml</file>
 </qresource>
 </RCC>
