--- a/cph/app/Frontend/app.qrc
+++ b/cph/app/Frontend/app.qrc
@@ -22,6 +22,8 @@
     <file>Components/ResizeButton.qml</file>
     <file>Components/CloseButton.qml</file>
     <file>Components/WindowControlButton.qml</file>
+    <file>Components/SettingsSwitch.qml</file>
+    <file>Components/SettingsSlider.qml</file>
     <file>Components/VoteHeader.qml</file>
     <file>Components/VoteDelegate.qml</file>
     <file>Components/VoteButton.qml</file>
